
    * STCompiler.h:
    * STCompiler.m (compileStatements:, initializeCompilationContext,
    destroyCompilationContext, compileStatements:blockFlag:):
    Remove redundant code to discard the temporary variables after the
    compiling the statements of a method.

    * STCompilerUtils.h:
    * STCompilerUtils.m: (STCBlock):
    * STGrammar.y:
    * STGrammar.m:
    * STCompiler.m (compileBlock:, compileStatements:blockFlag:):
    Refactor to prepare for blocks with temporaries.

2025-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (value:, value:value:, value:value:value:value:,
    valueWithArgs:): Prevent exception when one of the arguments of the
    value methods is nil.

    * STBlock.m (whileTrue, whileFalse):
    Add methods.

    * NSArray+additions.m (detect:):
    * NSDictionary+additions.m (detect:):
    Return nil if no match was found.

    * NSDictionary+additions.h:
    * NSDictionary+additions.m (keysDo:):
    Add one more collection protocol method for NSDictionary.

    * GNUmakefile:
    * NSSet+additions.h:
    * NSSet+additions.m (do:, select:, reject:, collect:, detect:):
    Implement Smalltalk collection protocol methods for NSSet.

2019-03-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodeInterpreter.m (dispatchBytecode:):
    Use numberWithBool: when pushing true and false values onto the stack.

2019-03-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSmalltalkScriptObject.m (forwardInvocation:):
    Call super class implementation for unimplemented methods so that they
    get reported as unimplemented rather than silently returning nil.

2019-02-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * GNUmakefile:
    * NSDictionary+additions.h:
    * NSDictionary+additions.m:
    Implement Smalltalk collection protocol methods for NSDictionary.

2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (valueWithArguments:): Remove comma that unintentionally
    breaks an exception format string
